--- a/Parcijalni_modul3/app/build.gradle
+++ b/Parcijalni_modul3/app/build.gradle
@@ -1,17 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'com.google.gms.google-services'
     id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.example.danijelsojat.stepcounter'
+    namespace 'com.example.danijel.sojat.parcijalni_modul3'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.danijelsojat.stepcounter"
-        minSdk 29
+        applicationId "com.example.danijel.sojat.parcijalni_modul3"
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -32,7 +31,7 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
-    buildFeatures {
+    buildFeatures{
         viewBinding true
     }
 }
@@ -46,20 +45,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    // Firebase
-    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
-    implementation("com.google.firebase:firebase-auth-ktx")
-    implementation("com.google.firebase:firebase-analytics-ktx")
-    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
-    // Google Fit
-    implementation("com.google.android.gms:play-services-fitness:21.1.0")
-    implementation("com.google.android.gms:play-services-auth:20.6.0")
-    // Progress Bar
-    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
-    kapt 'com.github.bumptech.glide:compiler:4.7.1'
-    // Chart
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    // Room
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
