--- a/StepCounter/app/build.gradle
+++ b/StepCounter/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
     // Chart
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
